@@ -1,12 +1,0 @@
-
-include $(top_srcdir)/Makefile.tool-tests.am
-
-EXTRA_DIST = \
-	many-xpts.vgperf
-
-check_PROGRAMS = \
-	many-xpts
-
-AM_CFLAGS   += -O $(AM_FLAG_M3264_PRI)
-AM_CXXFLAGS += -O $(AM_FLAG_M3264_PRI)
-
