@@ -1,0 +1,2 @@
+prog: many-loss-records
+vgopts: --memcheck:leak-check=yes --memcheck:leak-resolution=high
